# tic-tac-toe

./: .travis.yml  README.md  tic-tac-toe.cabal
classic/: tic-tac-toe.cabal
classic/src/: TicTacToe.hs
classic/src/Player/: MinMax.lhs
gomoku/: ChangeLog.md  gomoku.cabal  makeplayers.sh  stack.yaml
gomoku/src/: Checks.hs  Gomoku.hs  MakePlayers.hs  Types.hs
gomoku/src/Player/: BestNext.hs  Computer.hs  Human.hs  KunkelOwen.hs
src/: Checks.hs  Misc.hs  TicTacToe.hs  Types.hs
src/Player/: BestNext.hs  Computer.hs  Human.hs  MinMax.lhs
