name:                gomoku
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable gomoku
  main-is:             Gomoku.hs
  build-depends:       base >=4.9 && <4.10, random >=1.1 && <1.2, time-out, time-units
  hs-source-dirs:      src
  other-modules:       Checks,
                       Types,
                       Misc

  default-language:    Haskell2010

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9 && <4.10, process
